--- a/porfolio.html
+++ b/porfolio.html
@@ -4,52 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/5e045f87ce.js" crossorigin="anonymous"></script>
     <title>Portfólio</title>
 </head>
 <body>
     <div class="container">
         <header>
-            <div class="logo">
-                <img src="" alt="">
+            <div class="cabecalho">
+                <div class="logo">
+                    <img src="/imagem/logo/logolara.png" alt="logo" class="logotipo">
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#sobre">Sobre</a></li>
+                        <li><a href="#tech">Tecnologias</a></li>
+                        <li><a href="#proj">Projetos</a></li>
+                        <li><a href="#contt">Contato</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Tecnologias</a></li>
-                    <li><a href="#">Projetos</a></li>
-                    <li><a href="#">Contato</a></li>
-                </ul>
-            </nav>
         </header>
         <div class="apresentacao">
-            <h1 class="titulointro">Olá, eu sou a Lara!</h1>
-            <h2 class="subtitulointro">Desenvolvedora de Sistemas</h2>
-            <p class="textointro">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                 type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic 
-                 typesetting, remaining essentially unchanged. It was popularised in </p>
-            <button class="saibamais">Saiba mais</button>
-        </div>
-    </div>
-    <div class="sobre">
-        <h1 class="titulosobre">Sobre mim</h1>
-    </div>
+            <div class="aprenbox">
+                <div class="elem1">  <img  class="mark1"  src="/imagem/elementos/manchamain.png" alt="" ></div>
+                <div class="avatar" ><img src="/imagem/elementos/avatarlaraok.png" alt="" class="avatarlara"></div>
+                <h1 class="titulointro">Olá, eu sou a Lara Moreira!</h1>
+                <h2 class="subtitulointro">Desenvolvedora Fullstack</h2>
+                <p class="textointro">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                    type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic 
+                    typesetting, remaining essentially unchanged. It was popularised in </p>
+                <button class="saibamais">Saiba mais</button>
+                <div class="mainredes">
+                    <a href="https://github.com/laramoreirab" target="_blank"><i class="fa-brands fa-github fa-2xl" style="color: #000000;"></i></a>
+                    <a href="" target="_blank"><i class="fa-brands fa-linkedin fa-2xl" style="color: #000000;"></i></a>
+                    <a href="" target="_blank"><i class="fa-solid fa-envelope fa-2xl" style="color: #000000;"></i></a>
+                </div>
+            </div>
+        </div> 
 
+    <section id="sobre">
+    <div class="sobre">
+        <h1 class="titulocorpo">Sobre mim</h1>
+        <div class="superiorsobre">
+                <div class="elem2"> <img src="/imagem/elementos/mark2.png" alt="" class="mark2"></div>
+                <div class="foto"><img src="/imagem/elementos/fotolara.png" class="fotolara"></div>
+        <div class="titulosobre">
+            <h2 class="nomesobre">Lara Moreira Barreto</h2>
+            <h4 class="subnomesobre">Desenvolvimento | Fullstack | Front-end | Back-end | Ciência da Computação</h4>
+        </div>
+        </div>
+        <div class="alignline1"><hr class="line1"></div>
+
+        <h2 class="formacao">Formação</h2>
+        <h2 class="experiencia">Experiência</h2>
+        <h2 class="idiomas">Idiomas e cursos complementares</h2>
+        <h2 class="hobbies">Hobbies</h2>
+    </div>
+    </section>
+
+    <section id="tech">
     <div class="tecnologias">
-        <h1 class="titulotec">Tecnologias</h1>
+        <h1 class="titulocorpo">Tecnologias</h1>
         
     </div>
+    </section>
 
+    <section id="proj">
     <div class="projetos">
-        <h1 class="tituloprojetos">Projetos</h1>
+        <h1 class="titulocorpo">Projetos</h1>
     </div>
+    </section>
 
+    <section id="contt">
     <div class="contato">
-        <h1 class="titulocontato">Contato</h1>
+        <h1 class="titulocorpo">Contato</h1>
+        <form id="contform" action="#.php" method="post">
+        <div class="contnumtel">
+            <div class="email"><input type="email" placeholder="Email"></div>
+            <div class="telefone"><input type="tel" pattern=[0-9]{2}[0-9]{5}-[0-9]{4} placeholder="Celular"></div>
+        </div>
+        <div class="nome"><input type="text" id="inome" placeholder="Nome"></div>
+        <div class="mensagem"><input type="text"  id="imsg" placeholder="Mensagem"></div>
+        <div class="enviarbtt"><input type="submit"></div>
+        </form>
+        <div class="mailcont">
+            <i class="fa-regular fa-envelope"></i>
+            <p class="textmail">laramoreiraba@gmail.com</p>
+        </div>
+        <div class="linkedincont">
+            <i class="fa-brands fa-linkedin-in"></i>
+            <p class="textlink">Lara Moreira Barreto</p>
+        </div>
+        <div class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.8841334496324!2d-46.56091152378593!3d-23.64432016464695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5cec46ebe475%3A0x8d2c14858d37a05e!2sSchool%20Senai%20Armando%20de%20Arruda%20Pereira!5e0!3m2!1sen!2sbr!4v1754584962771!5m2!1sen!2sbr"  height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </div>
+    </section>
+
 
     <footer>
     </footer>
+</div>
+<script src="app.js"></script>
 </body>
 </html>
