--- a/porfolio.html
+++ b/porfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" type="image/png"  href="/imagem/logo/favicon.png">
     <script src="https://kit.fontawesome.com/5e045f87ce.js" crossorigin="anonymous"></script>
     <title>Portfólio</title>
 </head>
@@ -87,16 +88,18 @@
             <div class="telefone"><input type="tel" pattern=[0-9]{2}[0-9]{5}-[0-9]{4} placeholder="Celular"></div>
         </div>
         <div class="nome"><input type="text" id="inome" placeholder="Nome"></div>
-        <div class="mensagem"><input type="text"  id="imsg" placeholder="Mensagem"></div>
+        <div class="mensagem"><textarea id="imsg" placeholder="Mensagem"></textarea></div>
         <div class="enviarbtt"><input type="submit"></div>
         </form>
-        <div class="mailcont">
-            <i class="fa-regular fa-envelope"></i>
-            <p class="textmail">laramoreiraba@gmail.com</p>
-        </div>
-        <div class="linkedincont">
-            <i class="fa-brands fa-linkedin-in"></i>
-            <p class="textlink">Lara Moreira Barreto</p>
+        <div class="containeredes">
+            <div class="mailcont">
+                <i class="fa-regular fa-envelope"></i>
+                <p class="textmail">laramoreiraba@gmail.com</p>
+            </div>
+            <div class="linkedincont">
+                <i class="fa-brands fa-linkedin-in"></i>
+                <p class="textlink">Lara Moreira Barreto</p>
+            </div>
         </div>
         <div class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.8841334496324!2d-46.56091152378593!3d-23.64432016464695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5cec46ebe475%3A0x8d2c14858d37a05e!2sSchool%20Senai%20Armando%20de%20Arruda%20Pereira!5e0!3m2!1sen!2sbr!4v1754584962771!5m2!1sen!2sbr"  height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </div>
