--- a/porfolio.html
+++ b/porfolio.html
@@ -100,6 +100,10 @@
                 <i class="fa-brands fa-linkedin-in"></i>
                 <p class="textlink">Lara Moreira Barreto</p>
             </div>
+            <div class="instacont">
+                <i class="fa-brands fa-instagram"></i>
+                <p class="textlink">lara_moreira05</p>
+            </div>
         </div>
         <div class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.8841334496324!2d-46.56091152378593!3d-23.64432016464695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5cec46ebe475%3A0x8d2c14858d37a05e!2sSchool%20Senai%20Armando%20de%20Arruda%20Pereira!5e0!3m2!1sen!2sbr!4v1754584962771!5m2!1sen!2sbr"  height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </div>
