--- a/porfolio.html
+++ b/porfolio.html
@@ -69,13 +69,30 @@
     <section id="tech">
     <div class="tecnologias">
         <h1 class="titulocorpo">Tecnologias</h1>
-        
+        <div class="contech">
+            <div class="superiortech">
+                <img src="/imagem/elementos/hteml.png" class="imghtml">
+                <img src="/imagem/elementos/cess.png" alt="" class="imgcss">
+                <img src="/imagem/elementos/javascri.png" alt="" class="imgjavascri">
+                <img src="/imagem/elementos/pehp.png" alt="" class="imgphp">
+            </div>
+            <div class="inferiortech">
+                <img src="/imagem/elementos/java.png" alt="" class="imgjava">
+                <img src="/imagem/elementos/python.png" alt="" class="imgpython">
+                <img src="/imagem/elementos/cplus.png" alt="" class="imgcplus">
+                <img src="/imagem/elementos/clang.png" alt="" class="imgc">
+            </div>
+        </div>
     </div>
     </section>
 
     <section id="proj">
     <div class="projetos">
         <h1 class="titulocorpo">Projetos</h1>
+        <div class="projetech">
+            <img src="/imagem/projetos/etech.jpeg" alt="">
+        </div>
+        
     </div>
     </section>
 
