ultimo commit atualizado

--- a/porfolio.html
+++ b/porfolio.html
@@ -90,9 +90,44 @@
     <div class="projetos">
         <h1 class="titulocorpo">Projetos</h1>
         <div class="projetech">
-            <img src="/imagem/projetos/etech.jpeg" alt="">
+            <img src="/imagem/projetos/etech.jpeg" class="etechimg">
+            <div class="contexto1">
+                <h2 class="etechtitle">Projeto e-Tech</h2>
+                <p class="textetech">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type and scrambled it to make a type specimen book</p>
+                <button class="explorar">
+                    <i class="fa-brands fa-github-alt fa-2xl"></i>
+                    Explorar 
+                </button>
+            </div>
         </div>
-        
+        <div class="projnetflix">
+            <div class="contexto2">
+            <h2 class="netflixtitle">Netflix Clone</h2>
+            <p class="textnet">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                    type and scrambled it to make a type specimen book</p>
+            <button class="explorar">
+                <i class="fa-brands fa-github-alt fa-2xl"></i>
+                Explorar  
+            </button>
+            </div>
+            <img src="/imagem/projetos/netflixclone.jpeg" class="netimg">
+        </div>
+        <div class="projlogin">
+            <img src="/imagem/projetos/paginalogin.jpeg" class="loginimg">
+            <div class="contexto3">
+            <h2 class="logintitle">Página de Login</h2>
+            <p class="textlogin">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                    type and scrambled it to make a type specimen book</p>
+            <button class="explorar">
+                <i class="fa-brands fa-github-alt fa-2xl"></i>
+                Explorar  
+            </button>
+            </div>
+        </div>
     </div>
     </section>
 
