--- a/porfolio.html
+++ b/porfolio.html
@@ -47,22 +47,112 @@
         </div> 
 
     <section id="sobre">
+    <h1 class="titulocorpo">Sobre mim</h1>
     <div class="sobre">
-        <h1 class="titulocorpo">Sobre mim</h1>
-        <div class="superiorsobre">
-                <div class="elem2"> <img src="/imagem/elementos/mark2.png" alt="" class="mark2"></div>
-                <div class="foto"><img src="/imagem/elementos/fotolara.png" class="fotolara"></div>
+        <div class="infosobre">
+                <div class="foto"><img src="/imagem/elementos/fotolara.svg" class="fotolara"></div>
         <div class="titulosobre">
             <h2 class="nomesobre">Lara Moreira Barreto</h2>
-            <h4 class="subnomesobre">Desenvolvimento | Fullstack | Front-end | Back-end | Ciência da Computação</h4>
+            <h4 class="subsobre">Desenvolvimento | Fullstack | Computação | Engenharia </h4>
+            <div class="continfogerais">
+                <div class="alinhamentoinfogerais">
+                    <div class="local"><i class="fa-solid fa-location-dot fa-xl" style="color: #000000;"></i>
+                        <p class="localtxt">São Paulo, Brasil</p>
+                    </div>
+                    <div class="idade">
+                        <i class="fa-regular fa-calendar fa-xl" style="color: #000000;"></i>
+                        <p class="idadetxt">19 Anos</p>
+                    </div>
+                    <div class="emailsobre">
+                        <i class="fa-regular fa-envelope fa-xl" style="color: #000000;"></i>
+                        <p class="emailtxt">laramoreiraba@gmail.com</p>
+                    </div>
+                    <div class="gitsobre">
+                        <i class="fa-brands fa-square-github fa-xl" style="color: #000000;"></i>
+                        <p class="gitxt">laramoreirab</p>
+                    </div>
+                </div>
+            </div>
         </div>
         </div>
-        <div class="alignline1"><hr class="line1"></div>
+        <div class="curriculo">
+            <div class="parte1">
+                <div class="objetivo">
+                    <div class="superiorobj">
+                    <div class="alignline1"><hr class="line1"></div>
+                    <h1 class="titobje">Objetivo</h1>
+                    </div>
+                    <p class="objetxt">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                    type and scrambled it to make a type specimen book.
+                    </p>
+                </div>
+                <div class="formacao">
+                    <div class="alignline2"><hr class="line2"></div>
+                    <h2 class="formatitle">Formação</h2>
+                    <div class="bolinhas">
+                        <div class="haste"></div>
+                        <div class="bolinha1"><img src="" alt=""></div>
+                        <div class="bolinha2"><img src="" alt=""></div>
+                        <div class="bolinha3"><img src="" alt=""></div>
+                        <div class="bolinha4"><img src="" alt=""></div>
+                    </div>
+                    <div class="cronologia">
+                        <h3 class="anoeng">2024 - 2029</h5>
+                        <h4 class="titeng">Engenharia de Informação</h4>
+                        <h5 class="instufabc">Universidade Federal do ABC</h5>
 
-        <h2 class="formacao">Formação</h2>
-        <h2 class="experiencia">Experiência</h2>
-        <h2 class="idiomas">Idiomas e cursos complementares</h2>
-        <h2 class="hobbies">Hobbies</h2>
+                        <h3 class="anobct">2024 - 2027</h5>
+                        <h4 class="titlbct">Bacharelado em Ciência e Tecnologia</h4>
+                         <h5 class="instufabc">Universidade Federal do ABC</h5>
+
+                        <h3 class="anotec">2025-2026</h3>
+                        <h4 class="titecnico">Curso Técnico em Desenvolvimento de Sistemas</h4>
+                        <h5 class="instsenai">Senai Armando de Arruda Pereira</h5>
+
+                        <h3 class="anomedio">2021 - 2023</h3>
+                        <h4 class="titlmedio">Ensino Médio Regular</h4>
+                        <h5 class="instmedio">Colégio Engenheiro Salvador Arena</h5>
+                    </div>
+                </div>
+
+                <div class="softskills">
+                    <h2 class="softtitle">Soft Skills</h2>
+                    <div class="alignline3"><hr class="line3"></div>
+                    <p class="softtxt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                    type and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
+            <div class="parte2">
+                <div class="idiomas">
+                    <h2 class="titidiomas">Idiomas</h2>
+                    <div class="alignline4"><hr class="line4"></div>
+                    <div class="portugues">
+                        <p class="labelportugues">Português</p>
+                        <img src="" alt="" class="proficiencia1">
+                    </div>
+                    <div class="ingles">
+                        <p class="labelingles">Inglês</p>
+                        <img src="" alt="" class="proficiencia2">
+                    </div>
+                </div>
+                <div class="cursos">
+                    <h2 class="titcursos">Cursos</h2>
+                    <div class="alignline5"><hr class="line5"></div>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="trabalhovol">
+                    <div class="alignline5"><hr class="line5"></div>
+                    <h2 class="titrabvolun">Trabalho Voluntário</h2>
+                </div>
+            </div>
+        </div>
     </div>
     </section>
 
