--- a/porfolio.html
+++ b/porfolio.html
@@ -17,12 +17,12 @@
                     <img src="/imagem/logo/logolara.png" alt="logo" class="logotipo">
                 </div>
                 <nav>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#sobre">Sobre</a></li>
-                        <li><a href="#tech">Tecnologias</a></li>
-                        <li><a href="#proj">Projetos</a></li>
-                        <li><a href="#contt">Contato</a></li>
+                    <ul class="menu">
+                        <li class="sessao"><a href="#">Home</a></li>
+                        <li class="sessao"><a href="#sobre">Sobre</a></li>
+                        <li class="sessao"><a href="#tech">Tecnologias</a></li>
+                        <li class="sessao"><a href="#proj">Projetos</a></li>
+                        <li class="sessao"><a href="#contt">Contato</a></li>
                     </ul>
                 </nav>
             </div>
@@ -80,7 +80,7 @@
                 <div class="objetivo">
                     <div class="superiorobj">
                     <div class="alignline1"><hr class="line1"></div>
-                    <h1 class="titobje">Objetivo</h1>
+                    <h2 class="titobje">Objetivo</h2>
                     </div>
                     <p class="objetxt">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -89,14 +89,18 @@
                     </p>
                 </div>
                 <div class="formacao">
+                    <div class="superiorformacao">
+                        <h2 class="formatitulo">Formação</h2>
                     <div class="alignline2"><hr class="line2"></div>
-                    <h2 class="formatitle">Formação</h2>
-                    <div class="bolinhas">
+                    </div>
+                    <div class="linhadotempo">
                         <div class="haste"></div>
-                        <div class="bolinha1"><img src="" alt=""></div>
-                        <div class="bolinha2"><img src="" alt=""></div>
-                        <div class="bolinha3"><img src="" alt=""></div>
-                        <div class="bolinha4"><img src="" alt=""></div>
+                        <div class="bolinhas">
+                        <div class="bolinha1"><img src="/imagem/elementos/bolinha.png" class="bolinhapreta"  alt=""></div>
+                        <div class="bolinha2"><img src="/imagem/elementos/bolinha.png" class="bolinhapreta" alt=""></div>
+                        <div class="bolinha3"><img src="/imagem/elementos/bolinha.png" class="bolinhapreta" alt=""></div>
+                        <div class="bolinha4"><img src="/imagem/elementos/bolinha.png"  class="bolinhapreta" alt=""></div>
+                        </div>
                     </div>
                     <div class="cronologia">
                         <h3 class="anoeng">2024 - 2029</h5>
@@ -107,7 +111,7 @@
                         <h4 class="titlbct">Bacharelado em Ciência e Tecnologia</h4>
                          <h5 class="instufabc">Universidade Federal do ABC</h5>
 
-                        <h3 class="anotec">2025-2026</h3>
+                        <h3 class="anotec">2025 - 2026</h3>
                         <h4 class="titecnico">Curso Técnico em Desenvolvimento de Sistemas</h4>
                         <h5 class="instsenai">Senai Armando de Arruda Pereira</h5>
 
@@ -116,40 +120,52 @@
                         <h5 class="instmedio">Colégio Engenheiro Salvador Arena</h5>
                     </div>
                 </div>
-
-                <div class="softskills">
-                    <h2 class="softtitle">Soft Skills</h2>
-                    <div class="alignline3"><hr class="line3"></div>
-                    <p class="softtxt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                    type and scrambled it to make a type specimen book.</p>
-                </div>
             </div>
             <div class="parte2">
                 <div class="idiomas">
-                    <h2 class="titidiomas">Idiomas</h2>
+                    <div class="superioridiomas">
                     <div class="alignline4"><hr class="line4"></div>
+                    <h2 class="titidiomas">Idiomas</h2>
+                    </div>
                     <div class="portugues">
-                        <p class="labelportugues">Português</p>
-                        <img src="" alt="" class="proficiencia1">
+                        <p class="labelportugues">Português:</p>
+                        <img src="/imagem/elementos/nivelport.png" alt="" class="proficiencia1">
                     </div>
                     <div class="ingles">
-                        <p class="labelingles">Inglês</p>
-                        <img src="" alt="" class="proficiencia2">
+                        <p class="labelingles">Inglês:</p>
+                        <img src="/imagem/elementos/niveling.png" alt="" class="proficiencia2">
                     </div>
                 </div>
                 <div class="cursos">
+                    <div class="superiorcursos">
                     <h2 class="titcursos">Cursos</h2>
                     <div class="alignline5"><hr class="line5"></div>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                    </div>
+                    <ul class="listacursos">
+                        <li class="topicocurso">Ética na Inteligência Artificial - Senai - Abril 2025 - 4h</li>
+                        <li class="topicocurso">Segurança do Trabalho - Senai - Abril 2025 - 14h</li>
+                        <li class="topicocurso">Excel Básico - Senai - Abril 2025 - 20h </li>
+                        <li class="topicocurso">Introdução a Computação Quântica - IBM - Fevereiro 2025 - 6h</li>
                     </ul>
                 </div>
                 <div class="trabalhovol">
-                    <div class="alignline5"><hr class="line5"></div>
+                    <div class="superiortrabvol">
+                    <div class="alignline6"><hr class="line6"></div>
                     <h2 class="titrabvolun">Trabalho Voluntário</h2>
+                    </div>
+                    <ul class="trabtxt">
+                        <li>Maratona de Programação SBC</li>
+                        <li>Arena em ação</li>
+                    </ul>  
+                </div>
+                <div class="softskills">
+                    <div class="superiorsoft">
+                    <h2 class="softtitle">Soft Skills</h2>
+                    <div class="alignline3"><hr class="line3"></div>
+                    </div>
+                    <p class="softtxt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                    type and scrambled it to make a type specimen book.</p>
                 </div>
             </div>
         </div>
