--- a/porfolio.html
+++ b/porfolio.html
@@ -18,11 +18,11 @@
                 </div>
                 <nav>
                     <ul class="menu">
-                        <li class="sessao"><a href="#">Home</a></li>
-                        <li class="sessao"><a href="#sobre">Sobre</a></li>
-                        <li class="sessao"><a href="#tech">Tecnologias</a></li>
-                        <li class="sessao"><a href="#proj">Projetos</a></li>
-                        <li class="sessao"><a href="#contt">Contato</a></li>
+                        <li class="sessao"><a href="#" class="linkmenu">Home</a></li>
+                        <li class="sessao"><a href="#sobre" class="linkmenu">Sobre</a></li>
+                        <li class="sessao"><a href="#tech" class="linkmenu">Tecnologias</a></li>
+                        <li class="sessao"><a href="#proj" class="linkmenu">Projetos</a></li>
+                        <li class="sessao"><a href="#contt" class="linkmenu">Contato</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,11 +37,11 @@
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
                     type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic 
                     typesetting, remaining essentially unchanged. It was popularised in </p>
-                <button class="saibamais">Saiba mais</button>
+                <button class="saibamais"><a href="#sobre">Saiba mais</a></button>
                 <div class="mainredes">
                     <a href="https://github.com/laramoreirab" target="_blank"><i class="fa-brands fa-github fa-2xl" style="color: #000000;"></i></a>
-                    <a href="" target="_blank"><i class="fa-brands fa-linkedin fa-2xl" style="color: #000000;"></i></a>
-                    <a href="" target="_blank"><i class="fa-solid fa-envelope fa-2xl" style="color: #000000;"></i></a>
+                    <a href="www.linkedin.com/in/lara-moreira-barreto-3b882b300" target="_blank"><i class="fa-brands fa-linkedin fa-2xl" style="color: #000000;"></i></a>
+                    <a href="mailto:laramoreiraba@gmail.com" target="_blank"><i class="fa-solid fa-envelope fa-2xl" style="color: #000000;"></i></a>
                 </div>
             </div>
         </div> 
@@ -203,8 +203,10 @@
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
                         type and scrambled it to make a type specimen book</p>
                 <button class="explorar">
+                    <a href="https://github.com/laramoreirab/projetoEcommerce.git" target="_blank">
                     <i class="fa-brands fa-github-alt fa-2xl"></i>
                     Explorar 
+                    </a>
                 </button>
             </div>
         </div>
@@ -215,8 +217,10 @@
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
                     type and scrambled it to make a type specimen book</p>
             <button class="explorar">
+                <a href="https://github.com/laramoreirab/NetflixClone.git" target="_blank">
                 <i class="fa-brands fa-github-alt fa-2xl"></i>
-                Explorar  
+                Explorar 
+                </a> 
             </button>
             </div>
             <img src="/imagem/projetos/netflixclone.jpeg" class="netimg">
@@ -229,8 +233,10 @@
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
                     type and scrambled it to make a type specimen book</p>
             <button class="explorar">
+                <a href="https://github.com/laramoreirab/loginpage.git" target="_blank">
                 <i class="fa-brands fa-github-alt fa-2xl"></i>
-                Explorar  
+                Explorar 
+                </a> 
             </button>
             </div>
         </div>
@@ -269,6 +275,16 @@
 
 
     <footer>
+        <p class="footertxt">
+            <i class="fa-regular fa-copyright" style="color: #2d2f34;"></i>
+            2025 Lara Moreira Barreto
+        </p>
+        <div class="alinharlinha"><hr class="linefooter"></div>
+        <div class="iconsfooter">
+        <i class="fa-brands fa-linkedin fa-xl"></i>
+        <i class="fa-brands fa-github fa-xl"></i>
+        <i class="fa-brands fa-instagram fa-xl"></i>
+        </div>
     </footer>
 </div>
 <script src="app.js"></script>
