preenchimento de textos

--- a/porfolio.html
+++ b/porfolio.html
@@ -33,10 +33,10 @@
                 <div class="avatar" ><img src="/imagem/elementos/avatarlaraok.png" alt="" class="avatarlara"></div>
                 <h1 class="titulointro">Olá, eu sou a Lara Moreira!</h1>
                 <h2 class="subtitulointro">Desenvolvedora Fullstack</h2>
-                <p class="textointro">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                    type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic 
-                    typesetting, remaining essentially unchanged. It was popularised in </p>
+                <p class="textointro">Meu nome é Lara, tenho 19 anos e atualmente estou estudando desenvolvimento fullstack,
+                     buscando aprimorar minhas habilidades técnicas e criativas. Meu interesse por tecnologia e ciência me impulsiona
+                     a aprender continuamente e explorar novas ideias. Aqui você encontrará minha trajetória, habilidades e
+                      projetos — fique à vontade para explorar e conhecer meu trabalho. </p>
                 <button class="saibamais"><a href="#sobre">Saiba mais</a></button>
                 <div class="mainredes">
                     <a href="https://github.com/laramoreirab" target="_blank"><i class="fa-brands fa-github fa-2xl" style="color: #000000;"></i></a>
@@ -83,9 +83,10 @@
                     <h2 class="titobje">Objetivo</h2>
                     </div>
                     <p class="objetxt">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                    type and scrambled it to make a type specimen book.
+                    Atuar como desenvolvedora fullstack ou estagiária na área de tecnologia, aplicando conhecimentos técnicos e criatividade no 
+                    desenvolvimento de soluções. Busco constantemente aprimorar minhas habilidades em programação, 
+                    contribuindo para projetos que unam eficiência, usabilidade e confiabilidade, enquanto evoluo como profissional na
+                     área de tecnologia e ciência.
                     </p>
                 </div>
                 <div class="formacao">
@@ -154,8 +155,14 @@
                     <h2 class="titrabvolun">Trabalho Voluntário</h2>
                     </div>
                     <ul class="trabtxt">
-                        <li>Maratona de Programação SBC</li>
+                        <li>Maratona de Programação Paulista</li>
+                        <p class="voluntariado">No dia 17/05/2025, participei como voluntária na organização da Maratona Paulista de Programação (MPP), 
+                            uma competição de programação competitiva que se destina a estudantes dos cursos de graduação de
+                             universidades presentes no estado de São Paulo.</p>
                         <li>Arena em ação</li>
+                        <p class="voluntariado">No ano de 2022 tive a oportunidade de participar como voluntária nas oficinas no evento "Arena no Parque" 
+                            realizado pela Faculdade e Colégio Engenheiro Salvador Arena. O Arena em Ação é um projeto da comunidade 
+                            escolar que pretende colaborar de forma solidária levando acesso cultural á comunidade.</p>
                     </ul>  
                 </div>
                 <div class="softskills">
@@ -163,9 +170,9 @@
                     <h2 class="softtitle">Soft Skills</h2>
                     <div class="alignline3"><hr class="line3"></div>
                     </div>
-                    <p class="softtxt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                    type and scrambled it to make a type specimen book.</p>
+                    <p class="softtxt">Prezo por um bom relacionamento interpessoal, busca constante por aprendizado aliada a pensamento crítico, organização e proatividade
+
+                    </p>
                 </div>
             </div>
         </div>
