curriculo sem php

--- a/porfolio.html
+++ b/porfolio.html
@@ -206,9 +206,9 @@
             <img src="/imagem/projetos/etech.jpeg" class="etechimg">
             <div class="contexto1">
                 <h2 class="etechtitle">Projeto e-Tech</h2>
-                <p class="textetech">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                        type and scrambled it to make a type specimen book</p>
+                <p class="textetech">O projeto e-Tech foi desenvolvido em 2025, com a proposta de ser um ecommerce de
+                     eletrônicos no qual sua função principal é possibilitar o usuário a usar o carrinho de compras e 
+                     finalizar seu pedido. Sendo desenvolvido em HTML, CSS, Javascript e PHP.</p>
                 <button class="explorar">
                     <a href="https://github.com/laramoreirab/projetoEcommerce.git" target="_blank">
                     <i class="fa-brands fa-github-alt fa-2xl"></i>
@@ -220,9 +220,9 @@
         <div class="projnetflix">
             <div class="contexto2">
             <h2 class="netflixtitle">Netflix Clone</h2>
-            <p class="textnet">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                    type and scrambled it to make a type specimen book</p>
+            <p class="textnet">O Netflix clone foi meu primeiro projeto feito totalmente sem consulta.
+                 Desenvolvido em 2024, a finalidade foi reproduzir de forma mais fiel a página de login 
+                 do streamming Netflix, além de estudar como é estruturado páginas de entrada e sua elementação</p>
             <button class="explorar">
                 <a href="https://github.com/laramoreirab/NetflixClone.git" target="_blank">
                 <i class="fa-brands fa-github-alt fa-2xl"></i>
@@ -236,9 +236,9 @@
             <img src="/imagem/projetos/paginalogin.jpeg" class="loginimg">
             <div class="contexto3">
             <h2 class="logintitle">Página de Login</h2>
-            <p class="textlogin">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                    type and scrambled it to make a type specimen book</p>
+            <p class="textlogin">Login Page foi um projeto desenvolvido com a finalidade de estudo em linguagens de marcação, HTML e CSS.
+                 Esse projeto desenvolvido em 2024 foi o primeiro contato que tive com desenvolvimento web e realizado juntamente com 
+                 materiais de apoio.</p>
             <button class="explorar">
                 <a href="https://github.com/laramoreirab/loginpage.git" target="_blank">
                 <i class="fa-brands fa-github-alt fa-2xl"></i>
