--- a/porfolio.html
+++ b/porfolio.html
@@ -158,11 +158,11 @@
                         <li>Maratona de Programação Paulista</li>
                         <p class="voluntariado">No dia 17/05/2025, participei como voluntária na organização da Maratona Paulista de Programação (MPP), 
                             uma competição de programação competitiva que se destina a estudantes dos cursos de graduação de
-                             universidades presentes no estado de São Paulo.</p>
+                             universidades de São Paulo.</p>
                         <li>Arena em ação</li>
                         <p class="voluntariado">No ano de 2022 tive a oportunidade de participar como voluntária nas oficinas no evento "Arena no Parque" 
-                            realizado pela Faculdade e Colégio Engenheiro Salvador Arena. O Arena em Ação é um projeto da comunidade 
-                            escolar que pretende colaborar de forma solidária levando acesso cultural á comunidade.</p>
+                            realizado pela Faculdade e Colégio Engenheiro Salvador Arena, um projeto da comunidade 
+                            escolar que pretende colaborar socialemente levando acesso cultural á comunidade.</p>
                     </ul>  
                 </div>
                 <div class="softskills">
